<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_lookup_account"
    tools:context=".budgetmobile.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="top|center_horizontal"
    android:layout_gravity="top|center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="5dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/label_userid"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/userid"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/label_email"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/email"/>
            </TableRow>

        </TableLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_horizontal"
            android:text="@string/label_lookup_account_email_directions"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <FrameLayout
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_send"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/green_rectangle"
            android:layout_gravity="left|center_vertical"
            android:onClick="goLookupAccountSendEmail"/>
    </FrameLayout>

</LinearLayout>