<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_topup_purchase_result"
    tools:context=".budgetmobile.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="top|center_horizontal"
    android:layout_gravity="top|center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/table_layout">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/label_approval_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_approval_status"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:layout_gravity="left"
                android:textStyle="bold"/>
            <TextView android:id="@+id/approval_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:layout_gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/label_authorization_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_authorization_code"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/authorization_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/label_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_order_id"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/label_tx_fef_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_tx_fef_num"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tx_fef_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:id="@+id/label_request_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_request_amount"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/request_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

        <TableRow android:id="@+id/promo_code_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:visibility="invisible">
            <TextView
                android:id="@+id/label_promo_code_save_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/label_promo_code_save_result"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/promo_code_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:gravity="left"/>
        </TableRow>

    </TableLayout>

</LinearLayout>